-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs25
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8009949 | 8 | Unassigned | P3 | Resolved | Fixed | b84 |
after the perm removal integrated.
The names of the counters will be changed to reflect Metaspaces instead of perm gen.
The JTREG tests that checks the jstat output must also be updated.
- backported by
-
JDK-8009949 NPG: Update jstat counter names to reflect metaspace changes
-
- Resolved
-
- duplicates
-
JDK-7197300 NPG: jstat counter names for metaspace are incorrectly named
-
- Closed
-
- relates to
-
JDK-8006740 The jstat options and counter names have been changed
-
- Resolved
-
-
JDK-8080345 With perm gen gone, perfdata counter sun.gc.policy.generations should be 2, not 3
-
- Resolved
-
-
JDK-8009384 Temporarily disable jstat tests to ease complicated push
-
- Closed
-
-
JDK-8009427 Re-enable tests that were disable to ease complicated push
-
- Closed
-
-
JDK-7021477 NPG: Implement tools support for the class meta-data if different from perm gen.
-
- Closed
-