8004172: Update jstat counter names to reflect metaspace changes

Reviewed-by: stefank, jmasa